--- a/TaskSystem/appsettings.json
+++ b/TaskSystem/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "Database": "Server=./;Database=DB_TaskSystem;User Id=root, Password=vasco"
+  },
   "AllowedHosts": "*"
 }
