Iniciando migração e configurando banco de dados.

--- a/TaskSystem/appsettings.json
+++ b/TaskSystem/appsettings.json
@@ -6,7 +6,9 @@
     }
   },
   "ConnectionStrings": {
-    "Database": "Server=./;Database=DB_TaskSystem;User Id=root, Password=vasco"
+    "Database": "Data Source=.\\SQLEXPRESS;Initial Catalog=DB_TaskSystem;TrustServerCertificate=true;Integrated Security=True;"
+
+
   },
   "AllowedHosts": "*"
 }
